src/objects/Issue__c.object
<CustomObject>
    <fields>
        <fullName>Issue_Display_Name__c</fullName>
        <label>Issue Display Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Issue</label>
        <referenceTo>Issue__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taxonomy__c</fullName>
        <label>Taxonomy</label>
        <picklist>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Issue_Display_Name__c</columns>
        <columns>Parent_Issue__c</columns>
        <columns>Taxonomy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>